# YOLO11-ncnn-Android

./: LICENSE  README.md
ncnn-android-yolov11/: README.md  local.properties
ncnn-android-yolov11/app/: build.gradle
ncnn-android-yolov11/app/src/main/: AndroidManifest.xml
ncnn-android-yolov11/app/src/main/assets/yolov11n_ncnn_model/: metadata.yaml  model_ncnn.py
ncnn-android-yolov11/app/src/main/assets/yolov11s_ncnn_model/: metadata.yaml  model_ncnn.py  yolov11s.ncnn.param
ncnn-android-yolov11/app/src/main/java/com/tencent/yolov11ncnn/: MainActivity.java  Yolov11Ncnn.java
ncnn-android-yolov11/app/src/main/jni/: CMakeLists.txt  yolov11.cpp  yolov11.h  yolov11ncnn.cpp
ncnn-android-yolov11/app/src/main/res/values/: strings.xml
ncnn-android-yolov11/gradle/wrapper/: gradle-wrapper.properties
ultralytics/: SafetyCheck.yaml  train.py  yolo
ultralytics/runs/detect/train/: args.yaml  results.csv
ultralytics/runs/detect/train/weights/best_ncnn_model/: metadata.yaml  model.ncnn.param
ultralytics/runs/detect/train3/: args.yaml  results.csv
ultralytics/ultralytics/engine/: exporter.py
ultralytics/ultralytics/nn/modules/: head.py
